# Fast-EasiLogin

./: .gitignore  .pre-commit-config.yaml  PRD.md  README.md  launcher.py  pyproject.toml
.github/: renovate.json
.github/workflows/: build.yml  codspeed.yml
api/: api.py  main.py
api/core/: user_manger.py
api/gateway/: router.py  state.py
api/user_auth/: auth_service.py  user_service.py
desktop/: main.py
desktop/view/: main.qml
desktop/view/pages/: About.qml  Accounts.qml  Dashboard.qml  Settings.qml
fast_easilogin/: .gitignore  __init__.py  __main__.py
fast_easilogin/api/: main.py
fast_easilogin/api/gateway/: __init__.py  router.py  state.py
fast_easilogin/api/user_auth/: auth_service.py  user_service.py
fast_easilogin/app/: bootstrap.py  mode.py  runner.py  utils.py
fast_easilogin/auth/: __init__.py  models.py  service.py
fast_easilogin/core/: basic_dir.py  constants.py  errors.py  http_client.py  service_manager.py
fast_easilogin/dashboard/: __init__.py  app.py  models.py  server.py
fast_easilogin/dashboard/router/: __init__.py  accounts.py  dashboard.py  settings.py  websocket.py
fast_easilogin/runtime/: mode.py  service_runner.py  utils.py
fast_easilogin/shared/: basic_dir.py  constants.py  errors.py  http_client.py  service_manager.py
fast_easilogin/shared/store/: __init__.py  config.py  config_manager.py  kv_cache.py  models.py  user_store.py
fast_easilogin/storage/: __init__.py  config_manager.py  kv_cache.py  models.py  user_store.py
fast_easilogin/web/: __init__.py  api_router.py  app.py  server.py
frontend/: astro.config.mjs  orval.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.json
frontend/src/components/business/: account-dialog.tsx  account-list.tsx  elevated-card.tsx  login-dialog.tsx  stats-card.tsx
frontend/src/components/layout/: layout.tsx  sidebar.tsx
frontend/src/components/ui/: button.tsx  card.tsx  dialog.tsx  index.ts  input.tsx
frontend/src/islands/: accounts.tsx  recent-logins.tsx  settings.tsx  stats.tsx
frontend/src/layouts/: BaseLayout.astro
frontend/src/lib/: index.ts
frontend/src/lib/api/: hooks.ts  websocket.ts
frontend/src/lib/http/: client.ts  index.ts
frontend/src/lib/utils/: motion.ts  time.ts
frontend/src/pages/: accounts.astro  index.astro  settings.astro
frontend/src/styles/: globals.css
frontend/src/types/: api.ts  index.ts
proxy/: mitm_local_id.py  server.py
runtime/: mode.py  process.py  service_runner.py  utils.py
shared/: basic_dir.py  constants.py  errors.py  http_client.py  models.py  service_manager.py  storage.py
shared/config/: config.py  models.py
shared/store/: config.py  models.py
shared/tools/: decorators.py  utils.py
src/fast_easilogin/: __init__.py  __main__.py  launcher.py  launcher_webui.py
src/fast_easilogin/api/: main.py
src/fast_easilogin/api/gateway/: router.py  state.py
src/fast_easilogin/api/static/: app.js  index.html  styles.css
src/fast_easilogin/api/user_auth/: auth_service.py  user_service.py
src/fast_easilogin/runtime/: service_runner.py  utils.py
src/fast_easilogin/shared/: constants.py  errors.py  http_client.py
src/fast_easilogin/shared/store/: config.py  models.py
src/fast_easilogin/webui/: router.py
src/fast_easilogin/webui/static/: index.html
src/fast_easilogin/webui/static/css/: style.css
src/fast_easilogin/webui/static/js/: app.js
tests/: test_benchmarks.py
