[dependency-groups]
dev = [
  "mypy >= 1.19.1",
  "prek >= 0.2.10",
  "pyright >= 1.1.405",
  "ruff >= 0.14.8",
  "types-PyYAML >= 6.0.12.20250915"
]

[project]
dependencies = [
  "PyYAML ~= 6.0.2",
  "diskcache ~= 5.6.3",
  "fastapi ~=0.129.0",
  "httpx[http2] ~= 0.28.1",
  "loguru ~= 0.7.2",
  "orjson ~= 3.11.5",
  "pydantic ~= 2.12.5",
  "python-multipart ~= 0.0.20",
  "pywin32 >= 306; platform_system == 'Windows'",
  "tomlkit ~= 0.14.0",
  "uvicorn ~= 0.40.0"
]
description = "seewo-fastlogin"
name = "fast_easilogin"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = false
disallow_untyped_defs = false
error_summary = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
plugins = ["pydantic.mypy"]
pretty = true
python_version = "3.11"
show_error_codes = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_errors = true
module = [
  "servicemanager",
  "win32event",
  "win32service",
  "win32serviceutil"
]

[tool.pyright]
exclude = [
  "**/__pycache__",
  ".venv",
  "build",
  "dist"
]
include = [
  "src"
]
pythonPlatform = "Windows"
pythonVersion = "3.11"
reportGeneralTypeIssues = true
reportMissingImports = true
reportMissingTypeStubs = false
reportOptionalCall = true
reportOptionalMemberAccess = true
reportOptionalSubscript = true
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
typeCheckingMode = "standard"
useLibraryCodeForTypes = true
venv = ".venv"
venvPath = "."

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
ignore = [
  "ARG002",
  "B008",
  "C901",
  "E501",
  "F841",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915"
]
select = [
  "ASYNC",
  "B",
  "C90",
  "DTZ",
  "E",
  "F",
  "I",
  "PERF",
  "PIE",
  "PL",
  "PTH",
  "RET",
  "RUF",
  "SIM",
  "TRY",
  "UP",
  "W"
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011"]
